# agentic-evals

./: .gitignore  .pre-commit-config.yaml  GLOSSARY.md  LICENSE  README.md  pyproject.toml
docs/: EXPERIMENT-METHODOLOGY.md
docs/experiments/exp-001-mlx-kv-compression-toolcalling/: README.md  RECOMMENDATIONS.md  REPORT.md
docs/experiments/exp-001-mlx-kv-compression-toolcalling/results/: leaderboard.csv  raw-results.jsonl
docs/experiments/exp-002-mlx-moe-coding-viability/: README.md  REPORT.md
docs/experiments/exp-003-qwen36-35b-coding-viability/: README.md  REPORT.md
docs/experiments/exp-004-serving-stack-bakeoff/: RECOMMENDATIONS.md  REPORT.md
docs/experiments/exp-004-serving-stack-bakeoff/results/: raw-results.jsonl
docs/experiments/exp-005-router-shootout/: README.md  RECOMMENDATIONS.md  REPORT.md
docs/experiments/exp-005-router-shootout/results/: leaderboard.csv  raw-results.jsonl
docs/experiments/exp-006-deterministic-harness-spine/: README.md  RESULTS.md
docs/experiments/exp-006-deterministic-harness-spine/campaign/: README.md  run-campaign.sh
docs/experiments/exp-006-deterministic-harness-spine/probe-kit/: README.md  agent.demo.json  agent.example.json  demo.sh  injection-pressure.jsonl  mock_agent.py  redteam-battery.jsonl  run_probes.py  (+1 more)
docs/experiments/exp-007-governance-topology-sweeps/: README.md  RESULTS.md
docs/experiments/exp-008-live-wire-same-graph/: README.md
src/agentic_evals/: __init__.py  cli.py
src/agentic_evals/experiments/: __init__.py
src/agentic_evals/harness/: __init__.py  report.py  runtime.py  tasks.py
tests/: test_exp002_tasks.py  test_exp003_thinking.py  test_exp005_router.py  test_harness.py  test_smoke.py
(+125 files in other folders)
